# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # # On branch main # Your branch is up to date with 'origin/main'. # # Changes to be committed: #	modified:   core/__pycache__/__init__.cpython-312.pyc #	modified:   core/__pycache__/admin.cpython-312.pyc #	modified:   core/__pycache__/apps.cpython-312.pyc #	modified:   core/__pycache__/forms.cpython-312.pyc #	modified:   core/__pycache__/models.cpython-312.pyc #	modified:   core/__pycache__/urls.cpython-312.pyc #	modified:   core/__pycache__/views.cpython-312.pyc #	modified:   core/migrations/__pycache__/0001_initial.cpython-312.pyc #	modified:   core/migrations/__pycache__/0002_alter_customuser_rut.cpython-312.pyc #	modified:   core/migrations/__pycache__/0003_auto_20240505_2036.cpython-312.pyc #	modified:   core/migrations/__pycache__/0004_merge_20240505_2043.cpython-312.pyc #	modified:   core/migrations/__pycache__/__init__.cpython-312.pyc #	modified:   dog_shelters/__pycache__/admin.cpython-312.pyc #	modified:   dog_shelters/__pycache__/apps.cpython-312.pyc #	modified:   dog_shelters/__pycache__/models.cpython-312.pyc #	modified:   dog_shelters/__pycache__/urls.cpython-312.pyc #	modified:   dog_shelters/__pycache__/views.cpython-312.pyc #	modified:   dog_shelters/migrations/__pycache__/0001_initial.cpython-312.pyc #	modified:   dog_shelters/migrations/__pycache__/0002_alter_dog_id.cpython-312.pyc #	modified:   dog_shelters/migrations/__pycache__/__init__.cpython-312.pyc #	modified:   project/__pycache__/settings.cpython-312.pyc #	modified:   project/__pycache__/urls.cpython-312.pyc #	modified:   project/__pycache__/wsgi.cpython-312.pyc #	modified:   project/settings.py #	modified:   requirements.txt #	deleted:    requirements2.txt #

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,38 @@
-Django
-pylint
-autopep8
-django-crispy-forms
-whitenoise
-psycopg2-binary
+asgiref==3.8.1
+astroid==3.1.0
+autopep8==2.1.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+colorama==0.4.6
+dill==0.3.8
+distlib==0.3.8
+Django==5.0.4
+django-crispy-forms==2.1
+django-health-check==3.18.2
+django-jazzmin==3.0.0
+djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+filelock==3.13.4
+idna==3.7
+isort==5.13.2
+JayDeBeApi==1.2.3
+JPype1==1.5.0
+lxml==5.2.2
+mccabe==0.7.0
+packaging==24.0
+pillow==10.3.0
+platformdirs==4.2.0
+psycopg2-binary==2.9.9
+pycodestyle==2.11.1
+PyJWT==2.8.0
+pylint==3.1.0
+pytz==2024.1
+requests==2.31.0
+spyne==2.14.0
+sqlparse==0.4.4
+suds==1.1.2
+tomlkit==0.12.4
+tzdata==2024.1
+urllib3==2.2.1
+virtualenv==20.25.1
+whitenoise==6.6.0
