--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ autopep8==2.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 colorama==0.4.6
+crispy-bootstrap5==2024.2
 dill==0.3.8
 distlib==0.3.8
 Django==5.0.4
